--- a/src/public/css/custom.css
+++ b/src/public/css/custom.css
@@ -11,18 +11,25 @@ body {
 
 /* Contenedor principal */
 .wrapper {
-  flex: 1;
   display: flex;
   flex-direction: column;
 }
 
 /* Área principal (contenido centrado) */
 .content {
-  flex: 1;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 20px;
+}
+
+
+
+@media (min-width: 2550px) {
+  .content {
+    padding: 0 160px !important;
+  }
+
 }
 
 /* Caja del login */
@@ -46,12 +53,15 @@ body {
 
 /* Ajuste para eliminar el marco de los íconos */
 .input-group .input-group-text {
-  background-color: transparent; /* Fondo transparente */
-  border: none; /* Sin borde */
+  background-color: transparent;
+  /* Fondo transparente */
+  border: none;
+  /* Sin borde */
   padding-left: 8px;
   padding-right: 8px;
   font-size: 1.1rem;
-  color: #6c757d; /* Color suave */
+  color: #6c757d;
+  /* Color suave */
 }
 
 /* Ajuste general del input para alinearse bien */
